bug fix for simpleclock.html

--- a/html/simpleclock.html
+++ b/html/simpleclock.html
@@ -56,9 +56,10 @@
       }
     </script>
 
-<div style="width:400px;justify-content:center">
+<div style="width:100%;display:flex">
+<div style="width:400px;margin:0 auto">
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="00 0 200 200">
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
   <g font-family="sans-serif">
 
     <circle id="ptbFaceBackground"cx="50%" cy="50%" r="50%"" fill="lightgray" data-fill-connected="#eaeaea" data-fill-disconnected="#ffb2b2"/>
@@ -154,6 +155,9 @@
     </g>
   </g>
 </svg>
+
+  </div>
+  </div>
 
   </body>
 
