--- a/html/simpleclock.html
+++ b/html/simpleclock.html
@@ -52,7 +52,7 @@
         {
           conf.longitude = parseFloat(lon);
         }
-      webSocketClock('uhr.ptb.de/time',conf); 
+      new WebSocketClock('uhr.ptb.de/time',conf); 
       }
     </script>
 
